--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@ body {
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   letter-spacing: 0.005em;
+  scroll-behavior: smooth;
 
   @supports (letter-spacing: 0.005cap) {
     letter-spacing: 0.005cap;
